--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
     "core-js": "^3.6.5",
+    "vant": "^4.0.11",
     "vue": "^3.0.0"
   },
   "devDependencies": {
